--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "ES2019",
         "esModuleInterop": true,
         "allowJs": true,
-        "strict": true,
-        "strictNullChecks": true
+        "strict": false,
+        "strictNullChecks": false
     }
 }
