--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
+    "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -31,5 +32,8 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "validator": "^13.5.2"
   }
 }
