--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.10",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
+    "supertest": "^6.0.1",
     "validator": "^13.5.2"
   }
 }
