--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/supertest": "^2.0.10",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "fast-glob": "^3.2.4",
     "mongodb": "^3.6.3",
     "supertest": "^6.0.1",
     "validator": "^13.5.2"
