refactor: change routes to use filesystem instead of fast-glob

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,12 @@
         "allowJs": true,
         "strict": false,
         "strictNullChecks": false
-    }
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.test.ts",
+    ]
 }
