--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,13 @@ services:
     build: .
     restart: always
     image: clean-node-api
-    command: npm start
+    command: npm run debug
+    #command: npm start
     volumes:
       - ./dist:/usr/src/clean-node-api/dist
+      - ./package.json:/usr/src/clean-node-api/package.json
     ports: 
       - "5050:5050"
+      - "9229:9229"
     links:
       - mongo
