--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc",
-    "up": "npm run build && docker-compose up -d",
+    "debug": "node --inspect=0.0.0.0:9229 --nolazy dist/main/server.js",
+    "up": "npm run build && docker-compose up",
     "down": "docker-compose down",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -26,6 +28,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.16",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "eslint": "^7.16.0",
@@ -39,17 +42,17 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "rimraf": "^3.0.2",
+    "sucrase": "^3.17.1",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/supertest": "^2.0.10",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "supertest": "^6.0.1",
     "validator": "^13.5.2"
   }
 }
