--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "allowJs": true,
         "strict": false,
-        "strictNullChecks": false
+        "strictNullChecks": false,
+        "sourceMap": false
     },
     "include": [
         "src"
