--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       - "27017:27017"
   api:
     container_name: api-container
-    build: .
+    #build: .
+    working_dir: /usr/src/clean-node-api
     restart: always
-    image: clean-node-api
-    command: npm run debug
+    image: node:15.8
+    command: bash -c "npm install --only-prod && npm run debug"
     #command: npm start
     volumes:
       - ./dist:/usr/src/clean-node-api/dist
